Fix padding on mobile + position logo ebp's better #109

--- a/src/styles/hero/index.scss
+++ b/src/styles/hero/index.scss
@@ -29,10 +29,15 @@ margin-top: var(--navbar-height);
   width: 100%;
   box-shadow: 0 2px 6px 0 rgba(0,0,0,0.3);
   position: absolute;
-  top: -82px;
+  top: -120px;
+  margin-left: 16px;
 
   img {
     width: 100%;
+  }
+
+  @media (min-width: 640px) {
+    margin-left: 0;
   }
 }
 
